@@ -10,6 +10,9 @@ Parameters:
 x:             number to be formatted; or a string resembling a number
 digits_behind: number of digits behind the decimal point
 """
+from warnings import warnpy3k
+warnpy3k("the fpformat module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 import re
 
