@@ -2,9 +2,10 @@
    Tests for fpformat module
    Nick Mathewson
 '''
-from test.test_support import run_unittest
+from test.test_support import run_unittest, import_module
 import unittest
-from fpformat import fix, sci, NotANumber
+fpformat = import_module('fpformat', deprecated=True)
+fix, sci, NotANumber = fpformat.fix, fpformat.sci, fpformat.NotANumber
 
 StringType = type('')
 
