@@ -23,6 +23,8 @@ Extension Modules
 Library
 -------
 
+- The fpformat module has been deprecated for removal in Python 3.0.
+
 - The dl module has been deprecated for removal in Python 3.0.
 
 - The Canvas module has been deprecated for removal in Python 3.0.
